[package]
name = "grindlist_server"
version = "0.1.0"
edition = "2021"
authors = ["David Harabagiu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11"
clap = { version = "3.2", features = ["derive"] }
sqlite = "0.26"
oauth2 = "4.2"
